Do adjustment to the site by fixing navbar and aligning the right section of the webpage

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 *{
-    border: 2px solid red;
+    /*border: 2px solid red;*/
 }
 
 .nav-bar{
@@ -10,4 +10,41 @@
 .nav-items{
     display: flex;
     gap: 70px;
+}
+
+.intro-section{
+    display: flex;
+}
+
+.headphone-div{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+}
+
+.discount{
+    display: inline;
+    height:150px;
+    position: absolute;
+    margin-top: 400px;
+
+}
+
+.discount-content{
+    position: absolute;
+    margin-top: 400px;
+    margin-left: 50px;
+    color: white;
+    font-weight: 900;
+}
+
+.action-btn{
+    position: absolute;
+    margin-left: 250px;
+    background-color: #e97348;
+    border-radius: 10px;
+    padding: 10px 20px 10px 20px;
+    color: white;
+    border: none;
 }
